Attempt to migrate most of the codebase to newer versions of Java